<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContentCadCartao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_nome_cartao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNomeCartao"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:background="@drawable/my_bg"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_num_cartao"
        app:layout_constraintStart_toStartOf="@+id/edtNomeCartao"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeCartao" />

    <EditText
        android:id="@+id/edtNumeroCartao"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="19"
        android:background="@drawable/my_bg"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_vencimento"
        app:layout_constraintStart_toStartOf="@+id/edtNumeroCartao"
        app:layout_constraintTop_toBottomOf="@+id/edtNumeroCartao" />

    <EditText
        android:id="@+id/edtVencimento"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_mm_aa"
        android:inputType="number"
        android:maxLength="5"
        android:background="@drawable/my_bg"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_cvv"
        app:layout_constraintStart_toEndOf="@+id/edtVencimento"
        app:layout_constraintTop_toBottomOf="@+id/edtNumeroCartao" />

    <EditText
        android:id="@+id/edtCVV"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:background="@drawable/my_bg"
        app:layout_constraintStart_toEndOf="@+id/edtVencimento"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_senha"
        app:layout_constraintStart_toStartOf="@+id/edtVencimento"
        app:layout_constraintTop_toBottomOf="@+id/edtVencimento" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/my_bg"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_melhor_dia"
        app:layout_constraintStart_toStartOf="@+id/edtSenha"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />

    <EditText
        android:id="@+id/edtDiaCompra"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:background="@drawable/my_bg"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_dia_vencimento"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />

    <EditText
        android:id="@+id/edtDiaVencimento"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:background="@drawable/my_bg"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imgNomeCartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/edtNomeCartao"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_priority_high_black_24dp" />

    <ImageView
        android:id="@+id/imgExibirSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/edtSenha"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_visibility_black_24dp" />

    <ImageView
        android:id="@+id/imgEsconderSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/imgExibirSenha"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_visibility_off_black_24dp" />

    <ImageView
        android:id="@+id/imgCopiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/edtNumeroCartao"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeCartao"
        app:srcCompat="@drawable/ic_content_copy_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>